--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@channel.io/channel-web-sdk-loader": "^1.1.7",
     "@hookform/resolvers": "^3.3.4",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
