--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@hotjar/browser": "^1.0.9",
     "@next/third-parties": "14.0.5-canary.38",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "next": "^14.2.3",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
