--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
+    "js-cookie": "^3.0.5",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
