--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@hotjar/browser": "^1.0.9",
     "@next/third-parties": "14.0.5-canary.38",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/react-cookies": "^0.1.3",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "js-cookie": "^3.0.5",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
