feat: 로그인 유지 아키텍처

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/api/auth/route.tsㅌ",
+    "src/app/api/get-refresh-token/route.tsㅌ"
+  ],
   "exclude": ["node_modules"]
 }
