--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-lottie-player": "^2.0.0",
     "react-redux": "^9.1.2",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
