--- a/package.json
+++ b/package.json
@@ -13,18 +13,14 @@
     "@hookform/resolvers": "^3.3.4",
     "@hotjar/browser": "^1.0.9",
     "@next/third-parties": "14.0.5-canary.38",
-    "@reduxjs/toolkit": "^2.2.5",
     "@types/react-select": "^5.0.1",
-    "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
-    "react-icons": "^5.1.0",
     "react-lottie-player": "^2.0.0",
-    "react-redux": "^9.1.2",
-    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "yup": "^1.4.0"
