docs: react-toast

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     ".next/types/**/*.ts",
     "src/app/api/auth/route.tsㅌ",
     "src/app/api/get-refresh-token/route.tsㅌ",
-    ".next/types/app/onBoarding/person/project/page.tsx"
+    ".next/types/app/onBoarding/person/project/page.tsx",
+    "src/components/common/component/ToastPopUp/ToastPopup.tsㅌ"
   ],
   "exclude": ["node_modules"]
 }
