--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@channel.io/channel-web-sdk-loader": "^1.1.7",
@@ -16,6 +17,7 @@
     "@types/react-select": "^5.0.1",
     "framer-motion": "^11.1.7",
     "next": "^14.2.3",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
