--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hotjar/browser": "^1.0.9",
     "@next/third-parties": "14.0.5-canary.38",
     "@types/react-select": "^5.0.1",
+    "cookies-next": "^4.3.0",
     "framer-motion": "^11.1.7",
     "next": "^14.2.3",
     "next-sitemap": "^4.2.3",
