--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
