--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "framer-motion": "^11.1.7",
     "next": "^14.2.3",
     "next-sitemap": "^4.2.3",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-lottie-player": "^2.0.0",
+    "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
