--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,9 @@
     "src/app/api/get-refresh-token/route.tsㅌ",
     ".next/types/app/onBoarding/person/project/page.tsx",
     "src/components/common/component/ToastPopUp/ToastPopup.tsㅌ",
-    "src/features/login/model/useAuthStore.tsx"
+    "src/features/login/model/useAuthStore.tsx",
+    "src",
+    "@types"
   ],
   "exclude": ["node_modules"]
 }
