style: ProfileEdit : 왼쪽메뉴 체크 이미지 적용 및 크기 확대

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
     "src/components/common/component/ToastPopUp/ToastPopup.tsㅌ",
     "src/features/login/model/useAuthStore.tsx",
     "src",
-    "@types"
+    "@types",
+    "../src/features/profile/edit/api/educationApi.ts"
   ],
   "exclude": ["node_modules"]
 }
