--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-lottie-player": "^2.0.0",
     "react-quill": "^2.0.0",
     "react-toastify": "^10.0.5",
+    "stompjs": "^2.3.3",
     "yup": "^1.4.0",
     "zustand": "^5.0.0"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/stompjs": "^2.3.9",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
