--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.66.11",
     "@types/react-select": "^5.0.1",
     "framer-motion": "^11.1.7",
+    "html-react-parser": "^5.2.2",
     "next": "^14.2.3",
     "next-sitemap": "^4.2.3",
     "quill-image-resize-module-react": "^3.0.0",
