--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-select": "^5.0.1",
     "framer-motion": "^11.1.7",
     "html-react-parser": "^5.2.2",
+    "linkify-react": "^4.2.0",
+    "linkifyjs": "^4.2.0",
     "next": "^14.2.3",
     "next-sitemap": "^4.2.3",
     "quill-image-resize-module-react": "^3.0.0",
