feat: Prettier 설정에 tailwindFunctions 추가 및 VSCode 설정 파일 생성

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "singleQuote": true,
   "trailingComma": "all",
   "semi": false,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindFunctions": ["twMerge", "twJoin"]
 }
