--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "linkifyjs": "^4.2.0",
     "next": "^14.2.3",
     "next-sitemap": "^4.2.3",
+    "quill-auto-links": "^0.1.3",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
