--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.55.0",
     "react-lottie-player": "^2.0.0",
     "react-quill": "^2.0.0",
     "swiper": "^11.2.4",
