--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "lint": "next lint"
   },
   "dependencies": {
     "@channel.io/channel-web-sdk-loader": "^1.1.7",
@@ -22,7 +21,6 @@
     "linkify-react": "^4.2.0",
     "linkifyjs": "^4.2.0",
     "next": "^14.2.25",
-    "next-sitemap": "^4.2.3",
     "quill-auto-links": "^0.1.3",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18",
