--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.66.11",
     "@types/react-select": "^5.0.1",
+    "cheerio": "^1.0.0",
     "framer-motion": "^11.1.7",
     "html-react-parser": "^5.2.2",
     "linkify-react": "^4.2.0",
